歷史紀錄 table 欄位寬度調整

--- a/personal.html
+++ b/personal.html
@@ -322,7 +322,7 @@
                                                 <th>訂單編號</th>
                                                 <th>提領金額</th>
                                                 <th>狀態</th>
-                                                <th>鏈上數據</th>
+                                                <!-- <th>鏈上數據</th> -->
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -331,7 +331,7 @@
                                                 <td></td>
                                                 <td></td>
                                                 <td></td>
-                                                <td></td>
+                                                <!-- <td></td> -->
                                             </tr>
                                             <tr>
                                                 <td class="record-time">2020-03-03 23:55</td>
@@ -341,9 +341,9 @@
                                                     <div><img src="img/coin.png">301,100.051831</div>
                                                 </td>
                                                 <td class="record-status"><span><i class="success">•</i> 已完成</span></td>
-                                                <td class="record-view">
+                                                <!-- <td class="record-view">
                                                     <a class="button btn-tertiary" href="javascript:void(0)">查看</a>
-                                                </td>
+                                                </td> -->
                                             </tr>
                                             <tr>
                                                 <td class="record-time">2020-03-03 23:55</td>
@@ -355,9 +355,9 @@
                                                 <td class="record-status">
                                                     <span><i class="warning">•</i> Pemrosesan Pembelian</span>
                                                 </td>
-                                                <td class="record-view">
+                                                <!-- <td class="record-view">
                                                     <a class="button btn-tertiary" href="javascript:void(0)">查看</a>
-                                                </td>
+                                                </td> -->
                                             </tr>
                                             <tr>
                                                 <td class="record-time">2020-03-03 23:55</td>
@@ -367,9 +367,9 @@
                                                     <div><img src="img/coin.png">30,000.12345</div>
                                                 </td>
                                                 <td class="record-status"><span><i class="error">•</i> 失敗</span></td>
-                                                <td class="record-view">
+                                                <!-- <td class="record-view">
                                                     <a class="button btn-tertiary" href="javascript:void(0)">查看</a>
-                                                </td>
+                                                </td> -->
                                             </tr>
                                             <tr>
                                                 <td class="record-time">2020-03-03 23:55</td>
@@ -379,9 +379,9 @@
                                                     <div><img src="img/coin.png">301,100.051831</div>
                                                 </td>
                                                 <td class="record-status"><span><i class="success">•</i> 已完成</span></td>
-                                                <td class="record-view">
+                                                <!-- <td class="record-view">
                                                     <a class="button btn-tertiary" href="javascript:void(0)">查看</a>
-                                                </td>
+                                                </td> -->
                                             </tr>
                                             <tr>
                                                 <td class="record-time">2020-03-03 23:55</td>
@@ -391,9 +391,9 @@
                                                     <div><img src="img/coin.png">100</div>
                                                 </td>
                                                 <td class="record-status"><span><i class="warning">•</i> 等待中</span></td>
-                                                <td class="record-view">
+                                                <!-- <td class="record-view">
                                                     <a class="button btn-tertiary" href="javascript:void(0)">查看</a>
-                                                </td>
+                                                </td> -->
                                             </tr>
                                             <tr>
                                                 <td class="record-time">2020-03-03 23:55</td>
@@ -403,9 +403,9 @@
                                                     <div><img src="img/coin.png">301,100.051831</div>
                                                 </td>
                                                 <td class="record-status"><span><i class="success">•</i> 已完成</span></td>
-                                                <td class="record-view">
+                                                <!-- <td class="record-view">
                                                     <a class="button btn-tertiary" href="javascript:void(0)">查看</a>
-                                                </td>
+                                                </td> -->
                                             </tr>
                                             <tr>
                                                 <td class="record-time">2020-03-03 23:55</td>
@@ -415,9 +415,9 @@
                                                     <div><img src="img/coin.png">3,000</div>
                                                 </td>
                                                 <td class="record-status"><span><i class="warning">•</i> 等待中</span></td>
-                                                <td class="record-view">
+                                                <!-- <td class="record-view">
                                                     <a class="button btn-tertiary" href="javascript:void(0)">查看</a>
-                                                </td>
+                                                </td> -->
                                             </tr>
                                             <tr>
                                                 <td class="record-time">2020-03-03 23:55</td>
@@ -427,9 +427,9 @@
                                                     <div><img src="img/coin.png">3,000</div>
                                                 </td>
                                                 <td class="record-status"><span><i class="warning">•</i> 等待中</span></td>
-                                                <td class="record-view">
+                                                <!-- <td class="record-view">
                                                     <a class="button btn-tertiary" href="javascript:void(0)">查看</a>
-                                                </td>
+                                                </td> -->
                                             </tr>
                                             <tr>
                                                 <td class="record-time">2020-03-03 23:55</td>
@@ -439,9 +439,9 @@
                                                     <div><img src="img/coin.png">3,000</div>
                                                 </td>
                                                 <td class="record-status"><span><i class="success">•</i> 已完成</span></td>
-                                                <td class="record-view">
+                                                <!-- <td class="record-view">
                                                     <a class="button btn-tertiary" href="javascript:void(0)">查看</a>
-                                                </td>
+                                                </td> -->
                                             </tr>
                                             <tr>
                                                 <td class="record-time">2020-03-03 23:55</td>
@@ -451,9 +451,9 @@
                                                     <div><img src="img/coin.png">301,100.051831</div>
                                                 </td>
                                                 <td class="record-status"><span><i class="error">•</i> 失敗</span></td>
-                                                <td class="record-view">
+                                                <!-- <td class="record-view">
                                                     <a class="button btn-tertiary" href="javascript:void(0)">查看</a>
-                                                </td>
+                                                </td> -->
                                             </tr>
                                         </tbody>
                                     </table>
