更新心理測驗小網排版

--- a/HOTP.html
+++ b/HOTP.html
@@ -158,7 +158,7 @@
                                             <span>
                                                 <img src="img/game/HOTP/frame-middle.png">
                                             </span>
-                                            <div class="frame-content">
+                                            <div class="frame-result">
                                                 <div class="img">
                                                     <img src="img/game/HOTP/Lanieve.jpg">
                                                     <h6>Lanieve</h6>
