--- a/MTP.html
+++ b/MTP.html
@@ -74,6 +74,7 @@
                         <li><a href="index.html#zkz">$ZKZ</a></li>
                         <li for="bridge" class="dropdown">
                             <button>Bridge</button>
+                            <div class="dropdown-padding">
                             <div class="dropdown-content">
                                 <ul>
                                     <li>
@@ -95,17 +96,18 @@
                                         <a href="https://app.multichain.org/#/router" target="_blank">Multichain</a>
                                     </li>
                                 </ul>
-                            </div>
+                            </div></div>
                         </li>
                         <li for="language" class="language dropdown">
                             <button>繁體中文</button>
+                            <div class="dropdown-padding">
                             <div class="dropdown-content">
                                 <ul>
                                     <li class="active"><a href="javascript:void()">繁體中文</a></li>
                                     <li><a href="javascript:void()">English</a></li>
                                     <li><a href="javascript:void()">日本語</a></li>
                                 </ul>
-                            </div>
+                            </div></div>
                         </li>
                         <li>
                             <a href="https://twitter.com/ZKaizoku_" target="_blank">
@@ -120,11 +122,12 @@
                 <button class="wallet popUp--open" for="login">連接錢包</button>
                 <div class="admin dropdown" style="display: none;">
                     <button>0x130...123DxA</button>
+                            <div class="dropdown-padding">
                     <div class="dropdown-content">
                         <ul>
                             <li><a href="personal.html">個人資訊</a></li>
                             <li><a href="javascript:void()">登出</a></li>
-                        </ul>
+                        </ul></div>
                     </div>
                 </div>
             </div>
