--- a/index.html
+++ b/index.html
@@ -248,6 +248,18 @@
 											<button class="btn-tertiary">查看遊戲介紹</button>
 										</div>
 									</div>
+									<div class="swiper-slide" onclick="location='HOTP.html'">
+										<img src="img/game/HOTP/thumb.jpg">
+										<div class="hover">
+											<h4>海盜之心</h4>
+											<ul class="tags">
+												<li>冒險</li>
+												<li>性格</li>
+												<li>心理測驗</li>
+											</ul>
+											<button class="btn-tertiary">查看遊戲介紹</button>
+										</div>
+									</div>
 								</div>
 							</div>
 							<div class="swiper-button-prev"></div>
