--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@
 
 				<section id="game-idx">
 					<div class="bg">
-						<video class="bg-desktop" autoplay muted loop poster="img/bg/game-bg.jpg">
+						<video class="bg-desktop" autoplay muted loop playsinline poster="img/bg/game-bg.jpg">
 							<source src="img/bg/game-bg.mp4" type="video/mp4">
 							<source src="img/bg/game-bg.webm" type="video/webm">
 						</video>
-						<video class="bg-mobile" autoplay muted loop poster="img/bg/game-bg-m.jpg">
+						<video class="bg-mobile" autoplay muted loop playsinline poster="img/bg/game-bg-m.jpg">
 							<source src="img/bg/game-bg-m.mp4" type="video/mp4">
 							<source src="img/bg/game-bg-m.webm" type="video/webm">
 						</video>
@@ -377,7 +377,7 @@
 
 				<section id="zkz">
 					<div class="bg">
-						<video autoplay muted loop poster="img/bg/zkz-bg.jpg">
+						<video autoplay muted loop playsinline poster="img/bg/zkz-bg.jpg">
 							<source src="img/bg/zkz-bg.mp4" type="video/mp4">
 							<source src="img/bg/zkz-bg.webm" type="video/webm">
 						</video>
